--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,28 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+body {
+    font-family: Helvetica, Arial, sans-serif;
+}
+.item {
+    float: left;
+    margin: 0 5px 0 5px;
+}
+.top, .buttons, .buttons div {
+    border: black solid 3px;
+}
+.button, .buttons div {
+    border-top: none;
+}
+.flip {
+    float: right;
+    background: black;
+}
+.price p:first-of-type {
+display: inline-block;
+}
+
+.price p:last-of-type {
+    display: inline-block;
+    float: right;
+}
