--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@ html {
 body {
     font-family: Helvetica, Arial, sans-serif;
 }
+/*.wrapper {
+    width: 1269px;
+    margin: auto;
+}*/
 .item {
     float: left;
     margin: 0 5px 0 5px;
@@ -14,6 +18,10 @@ body {
 }
 .top, .buttons, .buttons div, .flip {
     border: black solid 3px;
+}
+.top img {
+    max-width: 300px;
+    max-height: 300px;
 }
 .flip {
     float: right;
@@ -28,6 +36,10 @@ body {
 }
 .flip:hover {
     background: gray;
+}
+.flip p {
+    margin-top: 3px;
+    margin-left: 10px;
 }
 .button, .buttons div {
     border-top: none;
@@ -49,6 +61,10 @@ body {
 }
 .buttons div:hover {
     background: gray;
+}
+.buttons p {
+    text-align: center;
+    margin-top: 21px;
 }
 .price {
     padding: 0 5px 0 5px;
