--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,8 @@ body {
     background: gray;
 }
 .flip p {
-    margin-top: 3px;
-    margin-left: 10px;
+    margin-top: 0;
+    margin-left: 7px;
 }
 .button, .buttons div {
     border-top: none;
@@ -70,12 +70,15 @@ body {
     text-align: center;
     margin-top: 21px;
 }
-.pop-up-menu {
+.pop-up-menu li{
     display:none;
     list-style-type: none;
-    margin: -157px 0 0 -38px;
+    margin: 0 0 0 -38px;
 }
 .pop-up-menu li:last-of-type {
+    display: block;
+}
+ul.pop-up-menu li:hover {
     display: block;
 }
 .price {
