--- a/css/main.css
+++ b/css/main.css
@@ -75,17 +75,38 @@ body {
     text-align: center;
     margin-top: 21px;
 }
-.pop-up-menu li{
+.pop-up-menu ul{
     display:none;
+}
+.pop-up-menu:hover ul {
+    display: inline-block;
     list-style-type: none;
-    margin: 0 0 0 -38px;
+    position: relative;
+    top: -255px;
+    left: 3px;
+    background: white;
+    border: 2px solid black;
 }
-.pop-up-menu li:last-of-type {
-    display: block;
+.pop-up-menu ul:hover {
+    display: inline-block;
 }
-ul.pop-up-menu li:active {
-    display: block;
+.pop-up-menu li {
+    position: relative;
+    right: 19px;
 }
+/*.triangle {
+    display: none;
+}
+.pop-up-menu:hover .triangle {
+    display: inline-block;
+    position: relative;
+    top: 10px
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 5px 5px 0 5px;
+    border-color: #000000 transparent transparent transparent;
+}*/
 .price {
     padding: 0 5px 0 5px;
 }
