--- a/css/main.css
+++ b/css/main.css
@@ -26,10 +26,20 @@ body {
     max-width: 300px;
     max-height: 300px;
 }
-.top img:active {
+.front:active img {
     transition: transform 0.4s ease;
     transform: rotateY(90deg);
-    background: url(images/fillmurray-300x300.jpg)
+}
+.back img{
+    display: none;
+}
+.front:active .back img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    transition: transform 0.4s ease;
+    transform: rotateY(360deg);
 }
 .flip {
     float: right;
@@ -86,27 +96,15 @@ body {
     left: 3px;
     background: white;
     border: 2px solid black;
+    width: 52px;
 }
 .pop-up-menu ul:hover {
     display: inline-block;
 }
 .pop-up-menu li {
     position: relative;
-    right: 19px;
+    right: 21px;
 }
-/*.triangle {
-    display: none;
-}
-.pop-up-menu:hover .triangle {
-    display: inline-block;
-    position: relative;
-    top: 10px
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 5px 5px 0 5px;
-    border-color: #000000 transparent transparent transparent;
-}*/
 .price {
     padding: 0 5px 0 5px;
 }
