--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ body {
     display: inline-block;
     list-style-type: none;
     position: relative;
-    top: -255px;
+    top: -249px;
     left: 3px;
     background: white;
     border: 2px solid black;
@@ -107,6 +107,28 @@ body {
 }
 .pop-up-menu ul p:hover {
     color: gray;
+}
+.pop-up-menu:hover ul:after, .pop-up-menu:hover ul:before {
+    top: 100%;
+    left: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+}
+.pop-up-menu:hover ul:after {
+    border-color: rgba(255, 255, 255, 0);
+    border-top-color: #ffffff;
+    border-width: 5px;
+    margin-left: -5px;
+}
+.pop-up-menu:hover ul:before    {
+    border-color: rgba(0, 0, 0, 0);
+    border-top-color: #000000;
+    border-width: 8px;
+    margin-left: -8px;
 }
 .price {
     padding: 0 5px 0 5px;
