--- a/css/main.css
+++ b/css/main.css
@@ -26,20 +26,24 @@ body {
     max-width: 300px;
     max-height: 300px;
 }
-.front:active img {
-    transition: transform 0.6s ease;
-    transform: rotateY(90deg);
+.card {
+    position: relative;
 }
-.back img{
-    display: none;
+.card:active {
+    transition: transform 0.8s ease;
+    transform: rotateY(180deg);
 }
-.front:active .back img{
+.front, .back {
+    backface-visibility: hidden;
     position: absolute;
     top: 0;
     left: 0;
-    display: inline-block;
-    transition: transform 0.4s ease;
-    transform: rotateY(360deg);
+}
+.front {
+    transform: rotateY(0deg);
+}
+.back {
+    transform: rotateY(180deg);
 }
 .flip {
     float: right;
@@ -47,7 +51,7 @@ body {
     height: 30px;
     width: 30px;
     position: relative;
-    top: -304px;
+    top: 0;
     right: 0;
     border-top: none;
     border-right: none;
@@ -61,7 +65,6 @@ body {
 }
 .button, .buttons div {
     border-top: none;
-    margin-top: -1px;
 }
 .buttons {
     height: 63px;
@@ -76,7 +79,6 @@ body {
 }
 .buttons div:last-of-type {
     border-right: none;
-    margin-top: -31px;
 }
 .buttons div:hover {
     background: gray;
@@ -92,7 +94,7 @@ body {
     display: inline-block;
     list-style-type: none;
     position: relative;
-    top: -249px;
+    top: -248px;
     left: 3px;
     background: white;
     border: 2px solid black;
@@ -120,13 +122,13 @@ body {
 }
 .pop-up-menu:hover ul:after {
     border-color: rgba(255, 255, 255, 0);
-    border-top-color: #ffffff;
+    border-top-color: white;
     border-width: 5px;
     margin-left: -5px;
 }
 .pop-up-menu:hover ul:before    {
     border-color: rgba(0, 0, 0, 0);
-    border-top-color: #000000;
+    border-top-color: black;
     border-width: 8px;
     margin-left: -8px;
 }
@@ -141,11 +143,3 @@ display: inline-block;
     float: right;
     font-weight: bold;
 }
-/*.triangle {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 10px 10px 0 10px;
-    border-color: #000000 transparent transparent transparent;
-    position: relative;
-}*/
