--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,9 @@ body {
     position: relative;
 }
 .card:active {
-    transition: transform 0.8s ease;
+    transition: transform 0.6s ease;
     transform: rotateY(180deg);
+    transform-style: preserve-3d;
 }
 .front, .back {
     backface-visibility: hidden;
@@ -40,6 +41,7 @@ body {
     left: 0;
 }
 .front {
+    z-index: 2;
     transform: rotateY(0deg);
 }
 .back {
@@ -55,6 +57,7 @@ body {
     right: 0;
     border-top: none;
     border-right: none;
+    z-index: 3;
 }
 .flip:hover {
     background: gray;
