--- a/css/main.css
+++ b/css/main.css
@@ -150,3 +150,9 @@ display: inline-block;
     float: right;
     font-weight: bold;
 }
+@media (max-width: 480px) {
+    .wrapper {
+        max-width: 306px;
+        margin: auto;
+    }
+}
